add classname for image backgrounds

--- a/view/component/landing_page/landing_page_sp.html
+++ b/view/component/landing_page/landing_page_sp.html
@@ -32,7 +32,7 @@
 					還不知道三三新概念嗎？
 				</p>
 			</div>
-			<div class="lp-section lp-image-background" id="lp-three-elements">
+			<div class="lp-section lp-image-background lp-ib-cover" id="lp-three-elements">
 				<p class="lp-title">
 					三三的每樣產品背後都有 3 個元素
 				</p>
@@ -64,7 +64,7 @@
 					</p>
 				</div>
 			</div>
-			<div class="lp-section lp-image-background lp-content-right lp-text-opposite-side" id="lp-img-social-welfare">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-right lp-text-opposite-side" id="lp-img-social-welfare">
 				<p class="lp-title">
 					陪伴社福身障走一段長遠的路
 				</p>
@@ -103,7 +103,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="lp-section lp-image-background lp-content-left lp-text-opposite-side" id="lp-img-peasant-farmer">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-left lp-text-opposite-side" id="lp-img-peasant-farmer">
 				<p class="lp-title">
 					和小農成為夥伴
 				</p>
@@ -153,7 +153,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="lp-section lp-image-background lp-content-left lp-text-opposite-side" id="lp-img-cold-handmade">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-left lp-text-opposite-side" id="lp-img-cold-handmade">
 				<p class="lp-title">
 					專精冷製手作
 				</p>
@@ -167,7 +167,7 @@
 					就是要帶給消費者每個三三都放心的好產品
 				</p>
 			</div>
-			<div class="lp-section lp-image-background lp-content-right lp-text-opposite-side" id="lp-img-no-chemical">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-right lp-text-opposite-side" id="lp-img-no-chemical">
 				<p class="lp-title">
 					無化學添加
 				</p>
@@ -183,7 +183,7 @@
 					X 化學起泡劑
 				</p>
 			</div>
-			<div class="lp-section lp-image-background lp-content-left lp-text-opposite-side" id="lp-img-long-time-develop">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-left lp-text-opposite-side" id="lp-img-long-time-develop">
 				<p class="lp-title">
 					比別人多一倍的長時間研發
 				</p>
