--- a/view/component/landing_page/landing_page_ss.html
+++ b/view/component/landing_page/landing_page_ss.html
@@ -9,7 +9,7 @@
 					</p>
 				</div>
 			</div>
-			<div class="lp-section lp-image-background lp-content-right" id="lp-img-for-travel">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-right" id="lp-img-for-travel">
 				<p class="lp-title">
 					給愛旅行的你
 				</p>
@@ -44,7 +44,7 @@
 					起泡加倍，不添加化學起泡劑，特殊皂網袋設計，一洗就知道的綿密。
 				</p>
 			</div>
-			<div class="lp-section lp-image-background lp-content-left" id="lp-img-foam-fest">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-left" id="lp-img-foam-fest">
 				<div class="lp-text-cover-dark lp-content-left">
 					<p class="lp-title">
 						泡沫饗宴
@@ -62,7 +62,7 @@
 					</p>
 				</div>
 			</div>
-			<div class="lp-section lp-image-background lp-content-right" id="lp-img-natural-oil">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-right" id="lp-img-natural-oil">
 				<div class="lp-text-cover-dark lp-content-right">
 					<p class="lp-title lp-text-sep">
 						天然植物油多種配方
@@ -119,7 +119,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="lp-section lp-image-background lp-content-right" id="lp-img-easy-to-carry">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-right" id="lp-img-easy-to-carry">
 				<p class="lp-title">
 					攜帶方便
 				</p>
@@ -130,7 +130,7 @@
 					兩天一夜只要一包就能搞定你需要的清潔
 				</p>
 			</div>
-			<div class="lp-section lp-image-background lp-content-left" id="lp-img-essential-oil">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-left" id="lp-img-essential-oil">
 				<p class="lp-title">
 					獨門植物複方精油添加
 				</p>
@@ -142,7 +142,7 @@
 					更在使用完產品後達到放鬆效果。
 				</p>
 			</div>
-			<div class="lp-section lp-image-background lp-content-right" id="lp-img-welfare-produce-together">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-right" id="lp-img-welfare-produce-together">
 				<p class="lp-title">
 					社福協力生產
 				</p>
@@ -160,7 +160,7 @@
 					誰說身障朋友沒辦法做出精緻產品？
 				</p>
 			</div>
-			<div class="lp-section lp-image-background lp-content-right lp-text-opposite-side" id="lp-img-multiple-uses">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-right lp-text-opposite-side" id="lp-img-multiple-uses">
 				<p class="lp-title">
 					多種用途
 				</p>
