--- a/view/content/index.html
+++ b/view/content/index.html
@@ -18,9 +18,11 @@
 				</div>
 			</div>
 			<div class="slogan-wrap">
-				<h2 class="slogan-title">我們走的那條三三路: 3種元素 x 3個堅持</h2>
+				<h2 class="slogan-title">
+					我們走的那條三三路: 3種元素 x 3個堅持
+				</h2>
 			</div>
-			<div class="lp-section lp-image-background" id="lp-three-elements">
+			<div class="lp-section lp-image-background lp-ib-cover" id="lp-three-elements">
 				<p class="lp-title">
 					三三的每樣產品背後都有 3 個元素
 				</p>
@@ -52,7 +54,7 @@
 					</p>
 				</div>
 			</div>
-			<div class="lp-section lp-image-background lp-content-right lp-text-opposite-side" id="lp-img-social-welfare">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-right lp-text-opposite-side" id="lp-img-social-welfare">
 				<p class="lp-title">
 					陪伴社福身障走一段長遠的路
 				</p>
@@ -91,7 +93,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="lp-section lp-image-background lp-content-left lp-text-opposite-side" id="lp-img-peasant-farmer">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-left lp-text-opposite-side" id="lp-img-peasant-farmer">
 				<p class="lp-title">
 					和小農成為夥伴
 				</p>
@@ -141,7 +143,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="lp-section lp-image-background lp-content-left lp-text-opposite-side" id="lp-img-cold-handmade">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-left lp-text-opposite-side" id="lp-img-cold-handmade">
 				<p class="lp-title">
 					專精冷製手作
 				</p>
@@ -155,7 +157,7 @@
 					就是要帶給消費者每個三三都放心的好產品
 				</p>
 			</div>
-			<div class="lp-section lp-image-background lp-content-right" id="lp-img-natural-oil">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-right" id="lp-img-natural-oil">
 				<div class="lp-text-cover-dark">
 					<p class="lp-title lp-text-sep">
 						天然植物油多種配方
@@ -169,7 +171,7 @@
 					</p>
 				</div>
 			</div>
-			<div class="lp-section lp-image-background lp-content-right lp-text-opposite-side" id="lp-img-no-chemical">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-right lp-text-opposite-side" id="lp-img-no-chemical">
 				<p class="lp-title">
 					無化學添加
 				</p>
