--- a/view/content/trial.html
+++ b/view/content/trial.html
@@ -13,7 +13,7 @@
 					</p>
 				</div>
 			</div>
-			<div class="lp-section lp-image-background lp-content-left" id="lp-img-teng-partner">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-left" id="lp-img-teng-partner">
 				<div class="lp-text-cover-dark">
 					<p class="lp-title">
 						十公克夥伴
@@ -111,7 +111,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="lp-section lp-image-background lp-content-right" id="lp-img-cold-pro">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-right" id="lp-img-cold-pro">
 				<p class="lp-title">
 					專精冷製手作
 				</p>
@@ -122,7 +122,7 @@
 					三三透過12道完整工序製作出皮膚最好的產品。
 				</p>
 			</div>
-			<div class="lp-section lp-image-background lp-content-left" id="lp-img-listen-to-earth">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-left" id="lp-img-listen-to-earth">
 				<p class="lp-title">
 					傾聽土地的聲音
 				</p>
@@ -149,7 +149,7 @@
 					 三三想讓認真工作的身障學員們有工作做，有舞台可以展現他們的功夫。
 				</p>
 			</div>
-			<div class="lp-section lp-image-background lp-content-left" id="lp-img-retarded-produce-together">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-left" id="lp-img-retarded-produce-together">
 				<p class="lp-title">
 					身障學員協力生產
 				</p>
@@ -185,7 +185,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="lp-section lp-image-background lp-content-right lp-text-opposite-side" id="lp-img-media-report">
+			<div class="lp-section lp-image-background lp-ib-cover lp-content-right lp-text-opposite-side" id="lp-img-media-report">
 				<p class="lp-title">
 					國內外媒體爭光報導
 				</p>
