add trial link setting to create new tab when linked

--- a/view/content/index.html
+++ b/view/content/index.html
@@ -203,7 +203,7 @@
 				<p class="lp-subtitle">
 					立即點選免費申請限量試用包，讓三三認識你！
 				</p>
-				<a class="lp-orange-btn" href="https://trisoap.typeform.com/to/voNGpg">
+				<a class="lp-orange-btn" href="https://trisoap.typeform.com/to/voNGpg" target="_blank" rel="noopener">
 					我要申請
 				</a>
 			</div>
