--- a/view/user_function/member_signin.html
+++ b/view/user_function/member_signin.html
@@ -16,6 +16,8 @@
                     </div>
                     <div class="sign-block">
                         <input type="hidden" id="origin" value="[origin]">
+                        <input type="hidden" id="index" value="[index]">
+                        <input type="hidden" id="amount" value="[amount]">
                         <a class="promise-btn" href="javascript:void(0)" onclick="memberSignin()">登入</a>
                         <a class="promise-btn" href="index.php?route=member&in=signup">立即註冊</a>
                     </div>
