fix wrong html tag to ul.lp-text

--- a/view/component/landing_page/landing_page_sp.html
+++ b/view/component/landing_page/landing_page_sp.html
@@ -174,14 +174,14 @@
 				<p class="lp-subtitle">
 					只給你最必要的成分，最單純。
 				</p>
-				<p class="lp-text">
-					X 化學色素染劑<br>
-					X 化學防腐劑<br>
-					X 化學界面活性劑<br>
-					X 矽靈<br>
-					X 化學增稠劑<br>
-					X 化學起泡劑
-				</p>
+				<ul class="lp-text">
+					<li>X 化學色素染劑</li>
+					<li>X 化學防腐劑</li>
+					<li>X 化學界面活性劑</li>
+					<li>X 矽靈</li>
+					<li>X 化學增稠劑</li>
+					<li>X 化學起泡劑</li>
+				</ul>
 			</div>
 			<div class="lp-section lp-image-background lp-ib-cover lp-content-left lp-text-opposite-side" id="lp-img-long-time-develop">
 				<p class="lp-title">
