--- a/view/content/wedding.html
+++ b/view/content/wedding.html
@@ -2,16 +2,159 @@
 			<div id="wedding-advice">
 				<div class="wd-main-img">
 					<!-- img .full-width-img -->
-
 				</div>
 				<div class="wd-text-cover">
-					<p class="wd-title super-title">
+					<p class="wd-super-title">
 						你的婚禮，<br>
 						能夠創造更多幸福！
 					</p>
 				</div>
 				<div class="wd-content">
-
+					<p class="wd-subtitle">
+						三三吾鄉婚禮小物<br>
+						諮詢免費送 3 包天然皂絲包！
+					</p>
+					<a href="#" class="wedding-text-btn">
+						立即諮詢
+					</a>
 				</div>
+			</div>
+			<div class="wd-intro">
+				<div class="wd-content">
+					<p class="wd-title">
+						什麼是皂絲包？
+					</p>
+					<p class="wd-text">
+						三三吾鄉運用台灣小農栽培的農作與高純度植物油，生產出對環境與人體都溫柔無負擔的「冷製手工皂」，再細刨成絲狀，就成了「皂絲包」。
+					</p>
+				</div>
+				<div class="wd-main-img">
+					<!-- img .full-width-img -->
+				</div>
+			</div>
+			<div class="wd-image-background" id="wd-img-samples"></div>
+			<div class="wd-slogan" id="wd-img-031">
+				<p class="wd-title">
+					簡單，也可以與眾不同
+				</p>
+				<p class="wd-text">
+					三三吾鄉的婚禮皂絲包提供客製化的貼紙與吊牌，無論你的婚禮是日系森林風、還是歐美復古風，多達 15 種的貼紙設計都能夠讓你自由搭配，展現用心與巧思。
+				</p>
+			</div>
+			<div id="wedding-simple-procedure">
+				<div class="wd-main-img">
+					<!-- img .full-width-img -->
+				</div>
+				<div class="wd-text-cover">
+					<p class="wd-title">
+						簡單三步驟，婚禮贈品輕鬆搞定
+					</p>
+					<ol class="wd-tc-ol">
+						<li>
+							<p class="wd-text">
+								決定預算及數量
+							</p>
+						</li>
+						<li>
+							<p class="wd-text">
+								討論貼紙與吊牌設計<br>
+								並提供免費打樣以確認成品
+							</p>
+						</li>
+						<li>
+							<p class="wd-text">
+								製作完成後幫你貨運到府
+							</p>
+						</li>
+					</ol>
+				</div>
+			</div>
+			<div class="wd-image-background" id="wd-img-confidence">
+				<div class="wd-text-cover">
+					<p class="wd-title">
+						皂絲包，<br>
+						承裝你對生命的溫柔
+					</p>
+					<p class="wd-text">
+						三三吾鄉是一個社會企業，致力於讓偏鄉的憨兒擁有穩定的工作機會。而你所購買的每一包皂絲，都是憨兒們所完成的自信之作！
+					</p>
+				</div>
+			</div>
+			<div class="wd-intro">
+				<div class="wd-main-img">
+					<!-- img .full-width-img -->
+				</div>
+				<div class="wd-content">
+					<p class="wd-title">
+						你的放心，<br>
+						來自於我們對原料的執著
+					</p>
+					<p class="wd-text">
+						三三的「吾鄉」，意思也是「無香」，因為絕不採用對人體與環境造成負荷的化工香精。取而代之的是以純米、蜂蜜、薑黃、金針花等，以棕欖油、乳油木果脂作為基底，將大自然的美好淬煉呈現。
+					</p>
+				</div>
+			</div>
+			<hr class="wd-intro-sep">
+			<div class="wd-intro">
+				<div class="wd-content">
+					<p class="wd-title">
+						清透的呼吸感，<br>
+						肌膚最知道
+					</p>
+					<p class="wd-text">
+						在掌間輕輕搓揉皂絲包，綿密的泡沫能夠深入毛孔，帶走多餘的油脂與髒污，小小一包就能供全身清潔，讓肌膚感到重生般地輕盈。
+					</p>
+				</div>
+				<div class="wd-main-img">
+					<!-- img .full-width-img -->
+				</div>
+			</div>
+			<hr class="wd-intro-sep">
+			<div class="wd-intro">
+				<div class="wd-main-img">
+					<!-- img .full-width-img -->
+				</div>
+				<div class="wd-content">
+					<p class="wd-title">
+						隨時隨地，清爽潔淨
+					</p>
+					<p class="wd-text">
+						公共設施的洗手乳是否讓你不安心？皂絲包的輕巧包裝，讓你無論是外出旅行、野餐露營，隨時都能享有方便暢快的潔淨體驗。
+					</p>
+				</div>
+			</div>
+			<hr class="wd-intro-sep">
+			<div class="wd-intro">
+				<div class="wd-content">
+					<p class="wd-title">
+						揮別浪費，傳遞真實
+					</p>
+					<p class="wd-text">
+						皂絲包是理念與實用的結合，它不只傳達你對婚禮賓客的感謝，也表達你對生活的態度。誰說婚禮小物都只是裝飾品？<br>
+						讓我們從這一包皂絲開始改變。
+					</p>
+				</div>
+				<div class="wd-main-img">
+					<!-- img .full-width-img -->
+				</div>
+			</div>
+			<div id="wd-img-future">
+				<div class="wd-main-img">
+					<!-- img .full-width-img -->
+				</div>
+				<div class="wd-text-cover">
+					<p class="wd-super-title">
+						你正在創造公益新未來！
+					</p>
+					<p class="wd-text">
+						三三吾鄉致力於協助偏鄉的憨兒社福團體、生產天然手工皂，翻轉社會普遍對於憨兒與自閉兒的迷思，用高品質的產品回饋給消費者，是憨兒與三三吾鄉所堅持的夢想。而選用皂絲作為婚禮小物的你，正在與三三一同創造台灣公益的新未來！
+					</p>
+				</div>
+			</div>
+			<div id="wd-media-reports">
+
+			</div>
+			<div id="wd-customer-feedbacks">
+
 			</div>
 		</main>
